# Internship

./: .gitignore  README.md
AI-Studio-Projects/: SKILL.md
AI-Studio-Projects/Game/: README.md
AI-Studio-Projects/Game/src/: index.css
CLI projects/BigQueryReleasePulse/: .gitignore  README.md  app.py
ambient-expense-agent/: .env.save  Makefile  README.md  agents-cli-manifest.yaml  pyproject.toml  walkthrough.md
ambient-expense-agent/expense_agent/: agent.py  agent_runtime_app.py  config.py  fast_api_app.py
app/.adk/: session.db
listing-search/: README.md  search.py  test_search.py
shopping-assistant/: .pre-commit-config.yaml  README.md  agents-cli-manifest.yaml  threat_model.md
shopping-assistant/.agents/: hooks.json
shopping-assistant/.semgrep/: rules.yaml
shopping-assistant/app/: agent.py  fast_api_app.py
shopping-assistant/tests/: test_security_boundaries.py
skills-showcase/: README.md  SKILL.md  agent.py
temp-project/: README.md  agents-cli-manifest.yaml  pyproject.toml
temp-project/app/: fast_api_app.py
week2-agent/: .dockerignore  Dockerfile  README.md  agent.py  agent_loop.py  pyproject.toml  weather_agent.py
week2-agent/specs/: agent_loop_spec.md  streaming_summary_spec.md  tools_spec.md  weather_agent_spec.md  weather_fetcher_spec.md  weather_parser_spec.md
week3/: .env  day1_tool_calling.py
week3/day2_mcp/: mcp_client.py  mcp_server.py
week3/day3_semantic_search/: semantic_search.py  visualize_embeddings.py
world-cup-tracker-2026/: metadata.json
world-cup-tracker-2026/src/: App.tsx  data.ts  types.ts
(+24 files in other folders)
