[project]
name = "week2-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "bardiya.shavandi",email = "bardiya.shavandi@sabanciuniv.edu"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic (>=0.111.0,<0.112.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]

[tool.poetry]
packages = [{include = "week2_agent", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)",
    "ruff (>=0.15.19,<0.16.0)"
]
